# IRIS_Criteria

./: .gitignore  AGENTS.md  CLAUDE.md  MULTI_MODEL_TEST_RESULTS.md  Makefile  PROJECT_REVIEW.md  README.md  optuna_hpo_bert_peft.py  pyproject.toml
configs/: config.yaml
configs/data/: default.yaml
configs/hpo/: optuna.yaml
configs/model/: bert_base.yaml  iris.yaml
configs/training/: default.yaml
data/DSM5/: MDD_Criteria.json
docs/: DATA_DESCRIPTION.md  FINAL_PROGRESS_SUMMARY.md  IMPLEMENTATION_PROGRESS.md  PROGRESS_SUMMARY.md  T3_IRIS_ARCHITECTURE.md  T5_TRAINING_LOOP.md  overview.md
src/Project/: cli.py
src/Project/data/: preprocessing.py
src/criteria_bge_hpo/: __init__.py  cli.py
src/criteria_bge_hpo/data/: __init__.py  chunking.py  dataset.py  preprocessing.py
src/criteria_bge_hpo/evaluation/: __init__.py  evaluator.py
src/criteria_bge_hpo/hpo/: __init__.py  optuna_search.py
src/criteria_bge_hpo/models/: __init__.py  classifier_heads.py  iris_model.py  query_attention.py  retrieval.py
src/criteria_bge_hpo/training/: __init__.py  kfold.py  losses.py  trainer.py
src/criteria_bge_hpo/utils/: __init__.py  logging_utils.py  mlflow_setup.py  rich_console.py
src/dsm5_nli/: __init__.py  cli.py
src/dsm5_nli/data/: __init__.py  dataset.py  preprocessing.py
src/dsm5_nli/evaluation/: __init__.py  evaluator.py
src/dsm5_nli/models/: __init__.py  bert_classifier.py
src/dsm5_nli/training/: __init__.py  kfold.py  trainer.py
src/dsm5_nli/utils/: __init__.py  mlflow_setup.py  reproducibility.py  visualization.py
src/dsm5_nli_backup/: cli.py
tests/: test_evaluation.py  test_integration.py  test_iris_model.py  test_multi_model_support.py  test_training.py
